force-app/main/default/objects/Contract/fields/DocuSignMarcaContador__c.field-meta.xml
<CustomField>
    <fullName>DocuSignMarcaContador__c</fullName>
    <description>Campo creado para el mapeo de contrato de tipo póliza en DocuSign</description>
    <label>Marca Contador (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>