force-app/main/default/objects/Contract/fields/DocuSignMesInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DocuSignMesInicioContrato__c</fullName>
    <description>Campo creado para DocuSign</description>
    <formula>MONTH( StartDate )</formula>
    <label>Mes Inicio Contrato (DocuSign)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>