force-app/main/default/objects/Contract/fields/DocuSignModeloDeposito1__c.field-meta.xml
<CustomField>
    <fullName>DocuSignModeloDeposito1__c</fullName>
    <description>Campo creado para el mapeo de contrato Depósito propio en DocuSign</description>
    <label>Modelo Depósito 1 (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>