force-app/main/default/objects/Contract/fields/DocuSignModeloDeposito3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignModeloDeposito3__c</fullName>
    <description>Campo creado para el mapeo de contrato Depósito propio en DocuSign</description>
    <label>Modelo Depósito 3(DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>