force-app/main/default/objects/Contract/fields/DocusignNIFNIE__c.field-meta.xml
<CustomField>
    <fullName>DocusignNIFNIE__c</fullName>
    <description>NIF O NIE del contacto</description>
    <formula>IF ( DocuSignNombreContacto__c  &lt;&gt; &apos;&apos;,
   
      
    Account.Id_Fiscal__c ,
    &quot;&quot;
)</formula>
    <label>NIF|NIE Docusign</label>
    <type>Text</type>
</CustomField>