force-app/main/default/objects/Contract/fields/DocuSignNumeroContador__c.field-meta.xml
<CustomField>
    <fullName>DocuSignNumeroContador__c</fullName>
    <description>Campo creado para el mapeo de contrato de tipo póliza en DocuSign</description>
    <label>Número Contador (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>