force-app/main/default/objects/Contract/fields/DocuSignNumeroDepositos2__c.field-meta.xml
<CustomField>
    <fullName>DocuSignNumeroDepositos2__c</fullName>
    <description>Campo creado para el mapeo de contrato Depósito propio en DocuSign</description>
    <label>Nº de depósitos 2 (DocuSign)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>