force-app/main/default/objects/Contract/fields/DocuSignNumeroExpedienteDeposito2__c.field-meta.xml
<CustomField>
    <fullName>DocuSignNumeroExpedienteDeposito2__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Nº Expediente Depósito 2 (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>