force-app/main/default/objects/Contract/fields/DocuSignNumeroExpedienteDeposito3__c.field-meta.xml
<CustomField>
    <fullName>DocuSignNumeroExpedienteDeposito3__c</fullName>
    <description>Campo creado para el mapeo depósito propio en DocuSign</description>
    <label>Nº Expediente Depósito 3 (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>