force-app/main/default/objects/Contract/fields/DocuSignOtrosBanco__c.field-meta.xml
<CustomField>
    <fullName>DocuSignOtrosBanco__c</fullName>
    <description>Campo creado para el mapeo de contrato Depósitos propios en DocuSign</description>
    <label>Otros Banco (DocuSign)</label>
    <type>TextArea</type>
</CustomField>