force-app/main/default/objects/Contract/fields/DocuSignPagoDiferido__c.field-meta.xml
<CustomField>
    <fullName>DocuSignPagoDiferido__c</fullName>
    <description>Si el la forma de pago de forfait es 3, se informa el importe del forfait</description>
    <formula>IF( TEXT(Forma_de_pago_forfait__c )=&apos;3&apos;, Importe_forfait__c ,NULL)</formula>
    <label>Pago diferido DocuSign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>