force-app/main/default/objects/Contract/fields/DocuSignPagoInicialCliente__c.field-meta.xml
<CustomField>
    <fullName>DocuSignPagoInicialCliente__c</fullName>
    <description>Si el la forma de pago de forfait es 1, se informa el importe del forfait</description>
    <formula>IF( TEXT(Forma_de_pago_forfait__c )=&apos;1&apos;,  Importe_forfait__c ,NULL)</formula>
    <label>Pago Inicial Cliente DocuSign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>