force-app/main/default/objects/Contract/fields/DocuSignPoblacionBanco__c.field-meta.xml
<CustomField>
    <fullName>DocuSignPoblacionBanco__c</fullName>
    <description>Campo creado para el mapeo de DocuSign Contrato Depósito Propio</description>
    <label>Población Banco (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>