force-app/main/default/objects/Contract/fields/DocuSignPresionReguladorContador__c.field-meta.xml
<CustomField>
    <fullName>DocuSignPresionReguladorContador__c</fullName>
    <description>Campo creado para el mapeo de contrato de tipo póliza en DocuSign</description>
    <label>Presión regulador Contador (DocuSign)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>