force-app/main/default/objects/Contract/fields/DocuSignPrimaConfortTramoContrato__c.field-meta.xml
<CustomField>
    <fullName>DocuSignPrimaConfortTramoContrato__c</fullName>
    <description>Primaservicios(€/mes) correspondiente al tramo del contrato</description>
    <formula>IF(TEXT(DocuSignTramoContrato__c) =&apos;1&apos;, TEXT( Primaservicios_mes1__c ) , 
IF(TEXT(DocuSignTramoContrato__c)=&apos;2&apos;, TEXT( Primaservicios_mes2__c ),
IF(TEXT(DocuSignTramoContrato__c)=&apos;3&apos;, TEXT( Primaservicios_mes3__c ),
IF(TEXT(DocuSignTramoContrato__c)=&apos;4&apos;, TEXT( Primaservicios_mes4__c ),
IF(TEXT(DocuSignTramoContrato__c)=&apos;5&apos;, TEXT( Primaservicios_mes5__c ),&quot;&quot;)))))</formula>
    <label>PrimaConfort Tramo Contrato</label>
    <type>Text</type>
</CustomField>