force-app/main/default/objects/Contract/fields/DocuSignPrimeraRedencia__c.field-meta.xml
<CustomField>
    <fullName>DocuSignPrimeraRedencia__c</fullName>
    <description>Campo creado para el mapeo de contrato de tipo póliza en DocuSign</description>
    <formula>IF(Consumo_previsto_tons__c =650, TRUE, FALSE)</formula>
    <label>Primera Residencia (DocuSign)</label>
    <type>Checkbox</type>
</CustomField>