force-app/main/default/objects/Contract/fields/DocuSignPuestaDisposicionDeposito__c.field-meta.xml
<CustomField>
    <fullName>DocuSignPuestaDisposicionDeposito__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que vendrá informado de las líneas de oferta. Actualmente se crea para mostrar en Docusign</description>
    <label>Puesta a disposición del depósito</label>
    <type>Checkbox</type>
</CustomField>