force-app/main/default/objects/Contract/fields/DocuSignRespInstalacionOtros__c.field-meta.xml
<CustomField>
    <fullName>DocuSignRespInstalacionOtros__c</fullName>
    <description>Campo creado para el mapeo de contratos de DocuSign</description>
    <label>Resp. Instalación Otros (DocuSign)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>