force-app/main/default/objects/Contract/fields/DocuSignSuministroAutomatico__c.field-meta.xml
<CustomField>
    <fullName>DocuSignSuministroAutomatico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que vendrá informado de las líneas de oferta. Actualmente se crea para mostrar en Docusign</description>
    <label>Suministro automático</label>
    <type>Checkbox</type>
</CustomField>