force-app/main/default/objects/Contract/fields/DocuSignTipoCamion11__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTipoCamion11__c</fullName>
    <description>Indica que es un tipo de camión mediano</description>
    <formula>IF(TEXT( Direccion_de_entrega__r.Tipo_de_camion__c )=&apos;MEDIANO&apos;, true, false)</formula>
    <label>Tipo de Camión DocuSign (11)</label>
    <type>Checkbox</type>
</CustomField>