force-app/main/default/objects/Contract/fields/DocuSignTipoCamion19__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTipoCamion19__c</fullName>
    <description>Indica que es un tipo de camión Grande</description>
    <formula>IF(TEXT( Direccion_de_entrega__r.Tipo_de_camion__c )=&apos;GRANDE&apos;, true, false)</formula>
    <label>Tipo de Camión DocuSign (19)</label>
    <type>Checkbox</type>
</CustomField>