force-app/main/default/objects/Contract/fields/DocuSignTipoCamion7__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTipoCamion7__c</fullName>
    <description>Indica que se trata de un tipo de camión pequeño</description>
    <formula>IF(TEXT( Direccion_de_entrega__r.Tipo_de_camion__c )=&apos;PEQUEÑO&apos;, true, false)</formula>
    <label>Tipo de Camión DocuSign (7)</label>
    <type>Checkbox</type>
</CustomField>