force-app/main/default/objects/Contract/fields/DocuSignTramoContrato__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTramoContrato__c</fullName>
    <description>Tramo del contrato al que corresponde el descuento de gas y primaConfort</description>
    <label>Tramo Contrato (DocuSign)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>