force-app/main/default/objects/Contract/fields/DocuSignVolumenContratado__c.field-meta.xml
<CustomField>
    <fullName>DocuSignVolumenContratado__c</fullName>
    <formula>Consumo_previsto_tons__c * VALUE(TEXT(Duraci_n_del_contrato_a_os__c))</formula>
    <inlineHelpText>Campo creado para el mapeo con DocuSign</inlineHelpText>
    <label>Volúmen Contratado Total (DocuSign)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>