force-app/main/default/objects/Contract/fields/dp_cad_min2__c.field-meta.xml
<CustomField>
    <fullName>dp_cad_min2__c</fullName>
    <label>dp cad min2</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>