force-app/main/default/objects/Contract/fields/dto_1__c.field-meta.xml
<CustomField>
    <fullName>dto_1__c</fullName>
    <label>% dto. 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>