force-app/main/default/objects/Contract/fields/dto_2__c.field-meta.xml
<CustomField>
    <fullName>dto_2__c</fullName>
    <label>% dto. 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>