force-app/main/default/objects/Contract/fields/dto_3__c.field-meta.xml
<CustomField>
    <fullName>dto_3__c</fullName>
    <label>% dto. 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>