force-app/main/default/objects/Contract/fields/dto_a_o_2__c.field-meta.xml
<CustomField>
    <fullName>dto_a_o_2__c</fullName>
    <label>dto(%/año)2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>