force-app/main/default/objects/Contract/fields/dto_Kg_1__c.field-meta.xml
<CustomField>
    <fullName>dto_Kg_1__c</fullName>
    <label>dto(€/Kg)1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>