force-app/main/default/objects/Contract/fields/dto_Kg_2__c.field-meta.xml
<CustomField>
    <fullName>dto_Kg_2__c</fullName>
    <label>dto(€/Kg)2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>