force-app/main/default/objects/Contract/fields/Duraci_n_contrato_GWh__c.field-meta.xml
<CustomField>
    <fullName>Duraci_n_contrato_GWh__c</fullName>
    <label>Duración contrato MWh</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>