force-app/main/default/objects/Contract/fields/Duracion_contrato_en_toneladas__c.field-meta.xml
<CustomField>
    <fullName>Duracion_contrato_en_toneladas__c</fullName>
    <label>Duracion contrato en toneladas</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>