force-app/main/default/objects/Contract/fields/ECD_grua_importe__c.field-meta.xml
<CustomField>
    <fullName>ECD_grua_importe__c</fullName>
    <label>ECD - grua importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>