force-app/main/default/objects/Contract/fields/emailDestinatarioBorrador__c.field-meta.xml
<CustomField>
    <fullName>emailDestinatarioBorrador__c</fullName>
    <description>Email del destinatario cuando el contrato es borrador</description>
    <label>Email Destinatario Borrador</label>
    <type>Email</type>
</CustomField>