force-app/main/default/objects/Contract/fields/Entrega_y_colocacion_deposito__c.field-meta.xml
<CustomField>
    <fullName>Entrega_y_colocacion_deposito__c</fullName>
    <label>Entrega y colocación depósito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>PRIMAGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>