force-app/main/default/objects/Contract/fields/Equipos_instalacion__c.field-meta.xml
<CustomField>
    <fullName>Equipos_instalacion__c</fullName>
    <label>Equipos instalación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>