force-app/main/default/objects/Contract/fields/Estado_2__c.field-meta.xml
<CustomField>
    <fullName>Estado_2__c</fullName>
    <label>Estado 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cambio titular</fullName>
            </value>
            <value>
                <fullName>Cambio titular-renovación</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Reactivación</fullName>
            </value>
            <value>
                <fullName>Renovación automática</fullName>
            </value>
            <value>
                <fullName>Renovado</fullName>
            </value>
            <value>
                <fullName>Renovado-ampliación</fullName>
            </value>
            <value>
                <fullName>Renovado-Depósito propio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>