force-app/main/default/objects/Contract/fields/Factura_n__c.field-meta.xml
<CustomField>
    <fullName>Factura_n__c</fullName>
    <label>Factura nº</label>
    <length>50</length>
    <type>Text</type>
</CustomField>