force-app/main/default/objects/Contract/fields/Fecha_prevista_obra_civil__c.field-meta.xml
<CustomField>
    <fullName>Fecha_prevista_obra_civil__c</fullName>
    <label>Fecha prevista obra civil</label>
    <type>Date</type>
</CustomField>