force-app/main/default/objects/Contract/fields/Financiacion_externa__c.field-meta.xml
<CustomField>
    <fullName>Financiacion_externa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financiacion externa</label>
    <type>Checkbox</type>
</CustomField>