force-app/main/default/objects/Contract/fields/Forma_de_pago_forfait__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago_forfait__c</fullName>
    <label>Forma de pago forfait</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>