force-app/main/default/objects/Contract/fields/Fraccionar_pago_1er_llenado_en_3__c.field-meta.xml
<CustomField>
    <fullName>Fraccionar_pago_1er_llenado_en_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraccionar pago 1er llenado en 3</label>
    <type>Checkbox</type>
</CustomField>