force-app/main/default/objects/Contract/fields/Gestion_instalacion_importe__c.field-meta.xml
<CustomField>
    <fullName>Gestion_instalacion_importe__c</fullName>
    <label>Gestion instalacion importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>