force-app/main/default/objects/Contract/fields/Importe_alquiler_contador__c.field-meta.xml
<CustomField>
    <fullName>Importe_alquiler_contador__c</fullName>
    <label>Importe alquiler contador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>