force-app/main/default/objects/Contract/fields/Importe_contador_nuevo__c.field-meta.xml
<CustomField>
    <fullName>Importe_contador_nuevo__c</fullName>
    <label>Importe contador nuevo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>