force-app/main/default/objects/Contract/fields/Importe_dep_sito__c.field-meta.xml
<CustomField>
    <fullName>Importe_dep_sito__c</fullName>
    <label>Importe depósito</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>