force-app/main/default/objects/Contract/fields/Importe_derechos_acometida__c.field-meta.xml
<CustomField>
    <fullName>Importe_derechos_acometida__c</fullName>
    <label>Importe derechos acometida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>