force-app/main/default/objects/Contract/fields/Importe_derechos_de_alta__c.field-meta.xml
<CustomField>
    <fullName>Importe_derechos_de_alta__c</fullName>
    <label>Importe derechos de alta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>