force-app/main/default/objects/Contract/fields/Importe_equipos__c.field-meta.xml
<CustomField>
    <fullName>Importe_equipos__c</fullName>
    <label>Importe equipos</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>