force-app/main/default/objects/Contract/fields/Importe_forfait__c.field-meta.xml
<CustomField>
    <fullName>Importe_forfait__c</fullName>
    <label>Importe forfait</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>