force-app/main/default/objects/Contract/fields/Importe_gesti_n_contrato__c.field-meta.xml
<CustomField>
    <fullName>Importe_gesti_n_contrato__c</fullName>
    <label>Importe gestión contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>