force-app/main/default/objects/Contract/fields/Importe_inspecci_n_quinquenal__c.field-meta.xml
<CustomField>
    <fullName>Importe_inspecci_n_quinquenal__c</fullName>
    <label>Importe inspección quinquenal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>