force-app/main/default/objects/Contract/fields/Importe_instalaci_n_exterior__c.field-meta.xml
<CustomField>
    <fullName>Importe_instalaci_n_exterior__c</fullName>
    <label>Importe instalación exterior</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>