force-app/main/default/objects/Contract/fields/Importe_modalidad_instalacion__c.field-meta.xml
<CustomField>
    <fullName>Importe_modalidad_instalacion__c</fullName>
    <label>Importe modalidad instalacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>