force-app/main/default/objects/Contract/fields/Importe_obra_Civil__c.field-meta.xml
<CustomField>
    <fullName>Importe_obra_Civil__c</fullName>
    <label>Importe obra Civil</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>