force-app/main/default/objects/Contract/fields/Importe_prima__c.field-meta.xml
<CustomField>
    <fullName>Importe_prima__c</fullName>
    <label>Importe prima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>