force-app/main/default/objects/Contract/fields/Importe_prima_por_tonelada__c.field-meta.xml
<CustomField>
    <fullName>Importe_prima_por_tonelada__c</fullName>
    <label>Importe prima por tonelada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>