force-app/main/default/objects/Contract/fields/Importe_proyectos__c.field-meta.xml
<CustomField>
    <fullName>Importe_proyectos__c</fullName>
    <label>Importe proyectos</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>