force-app/main/default/objects/Contract/fields/Importe_reenganche__c.field-meta.xml
<CustomField>
    <fullName>Importe_reenganche__c</fullName>
    <label>Importe reenganche</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>