force-app/main/default/objects/Contract/fields/Importe_SAU__c.field-meta.xml
<CustomField>
    <fullName>Importe_SAU__c</fullName>
    <label>Importe SAU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>