force-app/main/default/objects/Contract/fields/Importe_servicios__c.field-meta.xml
<CustomField>
    <fullName>Importe_servicios__c</fullName>
    <label>Importe servicios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>