force-app/main/default/objects/Contract/fields/Importe_t_rmino_fijo__c.field-meta.xml
<CustomField>
    <fullName>Importe_t_rmino_fijo__c</fullName>
    <label>Importe término fijo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>