force-app/main/default/objects/Contract/fields/Inertizado_Dep_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Inertizado_Dep_Cliente__c</fullName>
    <label>Inertizado Dep Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>