force-app/main/default/objects/Contract/fields/Instalacion_exterior__c.field-meta.xml
<CustomField>
    <fullName>Instalacion_exterior__c</fullName>
    <label>Instalación exterior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>PRIMAGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>