force-app/main/default/objects/Contract/fields/Instalacion_y_certificado_interior__c.field-meta.xml
<CustomField>
    <fullName>Instalacion_y_certificado_interior__c</fullName>
    <label>Instalación y certificado interior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>PRIMAGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>