force-app/main/default/objects/Contract/fields/Instalador__c.field-meta.xml
<CustomField>
    <fullName>Instalador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instalador</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos (Instalador)</relationshipLabel>
    <relationshipName>Contratos_como_instalador</relationshipName>
    <type>Lookup</type>
</CustomField>