force-app/main/default/objects/Contract/fields/Inversion_no_recuperable__c.field-meta.xml
<CustomField>
    <fullName>Inversion_no_recuperable__c</fullName>
    <label>Inversion no recuperable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>