force-app/main/default/objects/Contract/fields/IsTitularChange__c.field-meta.xml
<CustomField>
    <fullName>IsTitularChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Cambio de Titular</label>
    <type>Checkbox</type>
</CustomField>