force-app/main/default/objects/Contract/fields/LI_extintores_importe__c.field-meta.xml
<CustomField>
    <fullName>LI_extintores_importe__c</fullName>
    <label>LI extintores importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>