force-app/main/default/objects/Contract/fields/LI_legaliz_inst_ext_importe__c.field-meta.xml
<CustomField>
    <fullName>LI_legaliz_inst_ext_importe__c</fullName>
    <label>LI legaliz inst ext importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>